// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link hoists an enable directive 1`] = `
"enable f16;
//// @link getColor _00_


    fn _00_main() -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    
//// @link main 


    fn main() -> @location(0) vec4<f32> {
      return _00_main();
    }
    "
`;

exports[`link lifts recursive dependency 1`] = `
"//// @link getLifted _00_


    // Lifted Code
    fn _00_getLifted() {};
    
//// @link getColor2 _01_


    fn _01_getColor2() -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    
//// @link getColor1 _02_


    fn _02_getColor1() -> vec4<f32> { return _01_getColor2(); }
    
//// @link main 


    fn main() -> vec4<f32> {
      return _02_getColor1();
    }
    "
`;

exports[`link links a global across a module 1`] = `
"//// @link sub1 _00_


    fn getPosition(index: i32) -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    
//// @link sub2 _01_


    fn _01_getPosition() {};

    fn _01_getColor(index: i32) -> vec4<f32> {
      _01_getPosition();
      return vec4<f32>(1.0, 0.0, 1.0, 1.0);
    }
    
//// @link main 


    fn main() {
      var a = getPosition(0);
    }
    "
`;

exports[`link links a struct and field 1`] = `
"//// @link sub1 _00_


    struct _00_Foo { bar: f32 };
    fn _00_access(foo: _00_Foo) -> f32 { return foo.bar; }

//// @link main 


    fn main() {
      var a = getPosition(0);
    }
    "
`;

exports[`link links an external 1`] = `
"//// @link getColor _00_


    fn _00_main() -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    
//// @link main 


    fn main() -> @location(0) vec4<f32> {
      return _00_main();
    }
    "
`;

exports[`link links quad vertex 1`] = `
"//// @link <inline code> _00_


    fn _00_getPosition(index: i32) -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    
//// @link <inline code> _01_


    fn _01_getColor(index: i32) -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    
//// @link <inline code> _02_


    fn _02_getSize(index: i32) -> f32 { return 1.0; }
    
//// @link <inline code> _03_


    fn _03_getDepth(index: i32) -> f32 { return 0.5; }
    
//// @link @use-gpu/wgsl/use/types _04_


struct _04_SolidVertex {
  position: vec4<f32>,
  color: vec4<f32>,
  uv: vec2<f32>,
};


//// @link @use-gpu/wgsl/use/view _05_


struct _05_ViewUniforms {
  projectionMatrix: mat4x4<f32>,
  viewMatrix: mat4x4<f32>,
  viewPosition: vec4<f32>,
  viewResolution: vec2<f32>,
  viewSize: vec2<f32>,
  viewWorldScale: f32,
  viewPixelRatio: f32,
};

@group(VIEW) @binding(VIEW) var<uniform> _05_viewUniforms: _05_ViewUniforms;

fn _05_worldToView(position: vec4<f32>) -> vec4<f32> {
  return _05_viewUniforms.viewMatrix * position;
}

fn _05_viewToClip(position: vec4<f32>) -> vec4<f32> {
  return _05_viewUniforms.projectionMatrix * position;
}

fn _05_worldToClip(position: vec4<f32>) -> vec4<f32> {
  return _05_viewToClip(_05_worldToView(position));
}

fn _05_getPerspectiveScale(w: f32, f: f32) -> f32 {
  var m = _05_viewUniforms.projectionMatrix;
  var worldScale = m[1][1] * _05_viewUniforms.viewWorldScale;
  var clipScale = mix(1.0, worldScale / w, f);
  var pixelScale = clipScale * _05_viewUniforms.viewPixelRatio;
  return pixelScale;
}

//// @link @use-gpu/wgsl/geometry/quad _06_



const _06_QUAD: array<vec2<i32>, 4> = array<vec2<i32>, 4>(
  vec2<i32>(0, 0),
  vec2<i32>(1, 0),
  vec2<i32>(0, 1),
  vec2<i32>(1, 1),
);

fn _06_getQuadIndex(vertex: i32) -> vec2<i32> {
  return _06_QUAD[vertex];
}

fn _06_getQuadUV(vertex: i32) -> vec2<f32> {
  return vec2<f32>(_06_getQuadIndex(vertex));
}


//// @link getQuadVertex 


fn getQuadVertex(vertexIndex: i32, instanceIndex: i32) -> _04_SolidVertex {
  var position = _00_getPosition(instanceIndex);
  var color = _01_getColor(instanceIndex);
  var size = _02_getSize(instanceIndex);
  var depth = _03_getDepth(instanceIndex);

  var center = _05_worldToClip(position);

  var uv = _06_getQuadUV(vertexIndex);
  var xy = uv * 2.0 - 1.0;

  // Lerp between fixed size and full perspective.
  var pixelScale = _05_getPerspectiveScale(center.w, depth);
  // TODO: awaiting compound support
  //size *= pixelScale;
  size = size * pixelScale;

  if (HAS_EDGE_BLEED) {
    xy = xy * (size + 0.5) / size;
    uv = xy * .5 + .5;
  }

  // TODO: awaiting compound support
  //center.xy += xy * size * viewUniforms.viewResolution * center.w;
  center = vec4<f32>(center.xy + xy * size * _05_viewUniforms.viewResolution * center.w, center.zw);

  return _04_SolidVertex(
    center,
    color,
    uv
  );
}
"
`;

exports[`link links same module twice with different entry point 1`] = `
"//// @link sub _00_


    fn _00_used() -> f32 { return 1.0; }

    fn _00_getPosition(index: i32) -> vec4<f32> { return vec4<f32>(_00_used(), 0.0, 1.0, 1.0); }

    fn _00_getColor(index: i32) -> vec4<f32> { return vec4<f32>(_00_used(), 0.0, 1.0, 1.0); }
    
//// @link main 


    fn main() {
      var a = _00_getPosition(0);
      var b = _00_getColor(0);
    }
    "
`;

exports[`link substitutes attributes 1`] = `
"//// @link getColor _00_


    fn _00_getColor() -> vec4<f32> { return vec4<f32>(1.0, 0.0, 1.0, 1.0); }
    
//// @link main 


    @group(0) @binding(0) var<uniform> color: vec4<f32>;

    fn main() -> @location(0) vec4<f32> {
      return _00_getColor() + color;
    }
    "
`;

exports[`link tree shakes around identifiers 1`] = `
"//// @link sub _00_


    fn _00_used() -> f32 { return 1.0; }
fn _00_getPosition(index: i32) -> vec4<f32> { return vec4<f32>(_00_used(), 0.0, 1.0, 1.0); }

    
//// @link main 


    fn main() {
      var a = _00_getPosition(0);
    }
    "
`;

exports[`link tree shakes around identifiers 2`] = `
"//// @link sub _00_


    fn _00_used() -> f32 { return 1.0; }
fn _00_getPosition(index: i32) -> vec4<f32> { return vec4<f32>(_00_used(), 0.0, 1.0, 1.0); }

    
//// @link main 


    fn main() {
      var a = _00_getPosition(0);
    }
    "
`;

exports[`link tree shakes constants 1`] = `
"//// @link sub _00_


    const _00_colorUsed = vec4<f32>(0.0, 0.1, 0.2, 0.0);
fn _00_getColor() -> vec4<f32> {
      return _00_colorUsed;
    }
    
//// @link main 


    fn main() {
      var a = _00_getColor();
    }
    "
`;

exports[`link tree shakes constants 2`] = `
"//// @link sub _00_


    const _00_colorUsed = vec4<f32>(0.0, 0.1, 0.2, 0.0);
fn _00_getColor() -> vec4<f32> {
      return _00_colorUsed;
    }
    
//// @link main 


    fn main() {
      var a = _00_getColor();
    }
    "
`;
